// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Main 1`] = `
<div
  className="pf-c-empty-state"
>
  <Title
    headingLevel="h5"
    size="lg"
  >
    HTTP Proxies
  </Title>
  <EmptyStateBody>
    Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
  </EmptyStateBody>
  <Button
    variant="primary"
  >
    New HTTP Proxy
  </Button>
  <EmptyStateSecondaryActions>
    <Button
      aria-label="learn more action"
      variant="link"
    >
      Learn more about this in the documentation.
    </Button>
  </EmptyStateSecondaryActions>
</div>
`;

exports[`EmptyState Main variant large 1`] = `
<div
  className="pf-c-empty-state pf-m-lg"
>
  <Title
    headingLevel="h3"
    size="md"
  >
    EmptyState large
  </Title>
</div>
`;

exports[`EmptyState Main variant small 1`] = `
<div
  className="pf-c-empty-state pf-m-sm"
>
  <Title
    headingLevel="h3"
    size="md"
  >
    EmptyState small
  </Title>
</div>
`;
